--- a/tw/ep1.html
+++ b/tw/ep1.html
@@ -144,13 +144,13 @@
     <div class="controls">
     </div>
     <!-- Script Libraries -->
-<script src="/code/libs.js"></script>
-<script src="/code/app.js"></script>
+<script src="https://watch.pokemon.com/code/libs.js"></script>
+<script src="https://watch.pokemon.com/code/app.js"></script>
 <script type="text/javascript" src="https://assets.pokemon.com/static2/_ui/js/gus.js"></script>
 
     <!-- Limelight -->
     <script src="https://video.limelight.com/player/limelightjs-player.js"></script>
-    <script src="/code/player.js"></script>
+    <script src="https://watch.pokemon.com/code/player.js"></script>
 
 
 </body></html>
