--- a/blob/hh.html
+++ b/blob/hh.html
@@ -8,7 +8,7 @@
     <script>
       var video = document.querySelector('video');
 
-      var assetURL = 'http://nickdesaulniers.github.io/netfix/demo/frag_bunny.mp4';
+      var assetURL = 'https://istiyaq123.github.io/lamey/blob/videoplayback.mp4';
       // Need to be specific for Blink regarding codecs
       // ./mp4info frag_bunny.mp4 | grep Codec
       var mimeCodec = 'video/mp4; codecs="avc1.42E01E, mp4a.40.2"';
