--- a/testify.html
+++ b/testify.html
@@ -4,7 +4,8 @@
     </head>
     <body>
         <div id='player'>
-            <video width="352" height="288" src="https://s2.content.video.llnw.net/smedia/4953336d7f544f678a12270b176ea386/yT/S4cD-AHrhiAY-b1hxmSRIiZzPMjiZQvEljz2Wmejg/origins_04_hd_h264_en-d0af3366efd5e30f9450b49743cd64f2cba24c26.m3u8" controls>
+            <video width="352" height="288" controls>
+                <source src="https://s2.content.video.llnw.net/smedia/4953336d7f544f678a12270b176ea386/Ni/BYS2DargTOivJ8uxYsIknhC-sMyqsyf8cEUO0DAas/tw_ep101_eng_24_1080_h264_v2-384178845170db766b7b8f42cbbd1246ba5cd830.m3u8">
             </video>
         </div>
     </body>
