--- a/testify.html
+++ b/testify.html
@@ -1,12 +1,20 @@
-<html lang="en">
-    <head>
-        <meta charset=utf-8/>
-    </head>
-    <body>
-        <div id='player'>
-            <video width="352" height="288" controls>
-                <source src="https://s2.content.video.llnw.net/smedia/4953336d7f544f678a12270b176ea386/Ni/BYS2DargTOivJ8uxYsIknhC-sMyqsyf8cEUO0DAas/tw_ep101_eng_24_1080_h264_v2-384178845170db766b7b8f42cbbd1246ba5cd830.m3u8">
-            </video>
-        </div>
-    </body>
-</html>
+<!-- CSS  -->
+ <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
+
+
+<!-- HTML -->
+<video id='hls-example'  class="video-js vjs-default-skin" width="400" height="300" controls>
+<source type="application/x-mpegURL" src="https://s2.content.video.llnw.net/smedia/4953336d7f544f678a12270b176ea386/08/x9se1ymsq3UdegGYzOuSM9T3clooF-synY6Hi9ofQ/0945---pace-the-final-frontier-466475a3f40140737809b7a6ae393a6412df0fd6.m3u8">
+</video>
+
+
+<!-- JS code -->
+<!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
+<script src="https://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.14.1/videojs-contrib-hls.js"></script>
+<script src="https://vjs.zencdn.net/7.2.3/video.js"></script>
+
+<script>
+var player = videojs('hls-example');
+player.play();
+</script>
