--- a/testify.html
+++ b/testify.html
@@ -4,7 +4,7 @@
 
 <!-- HTML -->
 <video id='hls-example'  class="video-js vjs-default-skin" width="400" height="300" controls>
-<source type="application/x-mpegURL" src="https://s2.content.video.llnw.net/smedia/4953336d7f544f678a12270b176ea386/08/x9se1ymsq3UdegGYzOuSM9T3clooF-synY6Hi9ofQ/0945---pace-the-final-frontier-466475a3f40140737809b7a6ae393a6412df0fd6.m3u8">
+<source src="https://s2.content.video.llnw.net/smedia/4953336d7f544f678a12270b176ea386/08/x9se1ymsq3UdegGYzOuSM9T3clooF-synY6Hi9ofQ/0945---pace-the-final-frontier-466475a3f40140737809b7a6ae393a6412df0fd6.m3u8">
 </video>
 
 
