--- a/testify.html
+++ b/testify.html
@@ -2,11 +2,11 @@
  <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
 
 
+<!--
 <!-- HTML -->
 <video id='hls-example' class="video-js vjs-default-skin" width="720" height="412" controls>
-<source src="https://s2.content.video.llnw.net/smedia/4953336d7f544f678a12270b176ea386/qh/jN57TOkF3g3P0bFDRIln1x3eU17rCUL2NfXbNXROk/0420---wings-n-things-54271d60f7c38249c9e6b80e3e8afc4152d97adb.m3u8">
+<source type="application/x-mpegURL" src="https://s2.content.video.llnw.net/smedia/4953336d7f544f678a12270b176ea386/oI/5yv-JTftL-IFjgbkvIhWOtvzHBBc2TPA4zeibxtbk/pk_m20_i-choose-you_hd1080_2398_2ch_en-9058bf92cf813b8d84e7fb16bfbae9130fc1872d.m3u8">
 </video>
-
 
 <!-- JS code -->
 <!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
@@ -18,3 +18,7 @@
 var player = videojs('hls-example');
 player.play();
 </script>
+
+<video controls>
+    <source type="application/x-mpegURL" src="https://s2.content.video.llnw.net/smedia/4953336d7f544f678a12270b176ea386/oI/5yv-JTftL-IFjgbkvIhWOtvzHBBc2TPA4zeibxtbk/pk_m20_i-choose-you_hd1080_2398_2ch_en-9058bf92cf813b8d84e7fb16bfbae9130fc1872d.m3u8">
+</video>
