--- a/testify.html
+++ b/testify.html
@@ -979,7 +979,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 		<ul class="slider">
 		
-			<li data-analytics-label="video https://assets.pokemon.com/assets/cms2/img/watch-pokemon-tv/seasons/season05/season05_ep17_ss01.jpg" class="video" data-video-id="6ef3e9123ef04a8796c5953cdd25f94c" data-video-slug="05_17-espeon-not-included" data-video-player="delve" data-video-poster="https://assets.pokemon.com/assets/cms2/img/watch-pokemon-tv/seasons/season05/season05_ep17_ss01.jpg" data-video-title="Espeon, Not Included" data-video-season="5" data-video-episode="17" data-video-summary="Our heroes meet up with an old friend, Sakura, and her Pokemon—an Espeon that evolved from her Eevee." data-video-views="">
+			<li data-analytics-label="video https://assets.pokemon.com/assets/cms2/img/watch-pokemon-tv/seasons/season05/season05_ep17_ss01.jpg" class="video highlight clone loaded" data-video-id="6ef3e9123ef04a8796c5953cdd25f94c" data-video-slug="05_17-espeon-not-included" data-video-player="delve" data-video-poster="https://assets.pokemon.com/assets/cms2/img/watch-pokemon-tv/seasons/season05/season05_ep17_ss01.jpg" data-video-title="Espeon, Not Included" data-video-season="5" data-video-episode="17" data-video-summary="Our heroes meet up with an old friend, Sakura, and her Pokemon—an Espeon that evolved from her Eevee." data-video-views="">
 				<div class="img-wrap">
 					<img data-preload-src="https://web.archive.org/web/20190723075247/https://assets.pokemon.com/assets/cms2/img/watch-pokemon-tv/seasons/season05/season05_ep17_ss01.jpg" class="hero preload" alt="Espeon, Not Included">
 				</div>
@@ -1119,7 +1119,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   
   <div class="slider-title">
     <div class="column-12 push-1">
-      <h3 class="pokemon-character-slider-title" data-gtm-vis-first-on-screen-159551_82="5703" data-gtm-vis-first-on-screen-159551_85="5708">
+      <h3 class="pokemon-character-slider-title" data-gtm-vis-first-on-screen-159551_82="5703" data-gtm-vis-first-on-screen-159551_85="5708" data-gtm-vis-total-visible-time-159551_82="1300" data-gtm-vis-total-visible-time-159551_85="1300">
         <span class="notch-left-top-outer"></span>
         <span class="icon icon_pokeball"></span>
         Featured Pokémon
